--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
     float:left;
   
 }
+ul{
+    margin: auto;
+}
+.info-block{
+    padding-bottom: 2%;
+    margin-top: 2%;
+    padding-top: 2%;
+    border-radius: 10px 10px;
+    
+}
